PingPong/Manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:  # configuration of the pod within the config of deployment
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: jhoudijk/pingpong:latest
          imagePullPolicy: Always
